user feed post showing done